index page added content

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,7 +108,8 @@
                  </details>
                  <hr>
                  <h3 class="nhsuk-heading-m">Hypothesis A</h3>
-                 <p style="background: #DEE0E2; padding: 20px;">We are going to be testing this prototype with users. The design has been updated to be inline with GDS as well as the content which has been review by the content designer on our team.
+                 <p style="background: #DEE0E2; padding: 20px;">We believe by adding in content or a page around why the user cannot pay at the enquiry stage of the journey will help the user understand that they will have to wait until they get a PCN.
+               This is in hopes to cause less frustration and confusion. We understand from our CSAT results that this is one of the biggest issues the user faces with this journey.</p>
                   
                   
                  </p>
@@ -116,7 +117,23 @@
                  <br>Use postcode: NE2 4XL to get through the BSA journey</br>
                  <br>Use postcode: WA4 1AB to get to we cannot find your details</br>
                  
-                 
+                 <hr>
+                     
+                 <h3 class="nhsuk-heading-m">What we created:</h3>
+                 <ul class="nhsuk-list nhsuk-list--bullet">
+                    <li>For this journey we have made a couple of changes to the journey we removed some of the personal details pages such as Is this how your name was written on your [Benefit]? As well as the date of birth and address question which
+                     follows after that page. Instead the journey now just has a check your details page where the user can change their details at this point if they need to. This was to shorten the journey for the user.
+                  </li>
+                  <li>We have added one journey to this prototype which asks users on the enquiry letter page whether they want to pay or confirm their entitlement. If they select pay it will give the user a kickout screen explaining why they cannot pay. If they select confirm their 
+               entitlement it will take them through the rest of the journey.
+                    </li>
+                 </ul>
+                 <h3 class="nhsuk-heading-m">What we plan to test:</h3>
+                 <ul class="nhsuk-list nhsuk-list--bullet">
+                    <li>For this round of research too we are going to add in some AB testing around why users can't pay at the enquiry stage we are going to do AB testing with the confirm your entitlement or pay screen against some extra content on the what happens next screen</li>
+                    <li>We also want to find out if the shortened journey of the check your details screen works for the user</li>
+                    <li>We plan to find out more around the service name and if users understand it</li>
+                 </ul>
                  
                  
                  <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter</a>
@@ -175,7 +192,10 @@
                      </ul>
                      <h3 class="nhsuk-heading-m">What we found:</h3>
                      <ul class="nhsuk-list nhsuk-list--bullet">
-                        <li>...</li>
+                        <li>We found people generally found the journey simple and easy</li>
+                        <li>Users found the journey a recognisable service and the content self expanitory</li>
+                        <li>One of the users found the questions around their details quite tedious before they get to their check your details page</li>
+                        <li>Another user found the yellow warning callout box a little stressful and could cause anxiety to some people</li>
                      </ul>
                      <h3 class="nhsuk-heading-m">Any known issues?</h3>
                      <ul class="nhsuk-list nhsuk-list--bullet">
