--- a/app/views/v4/enquiry-letter-details.html
+++ b/app/views/v4/enquiry-letter-details.html
@@ -101,7 +101,7 @@
         </div>
         
       </dl>
-      <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.  </p>
+      <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue.</p>
       </dl>
     </div>
    
