what happens next added content

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -97,7 +97,64 @@
             <div class="nhsuk-grid-column-three-thirds">
       <details class="nhsuk-details nhsuk-expander" nhsuk-polyfilled="true" id="nhsuk-details3">
         <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text3" tabindex="0" aria-expanded="false">
-           <span class="nhsuk-details__summary-text">Private Beta version 4 (6/3/2023)</span>
+           <span class="nhsuk-details__summary-text">Private Beta version 5 PCN journey (8/3/2023)</span>
+        </summary>
+        <div class="nhsuk-details__text" id="nhsuk-details__text3" aria-hidden="true">
+           <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0" nhsuk-polyfilled="true" id="nhsuk-details4">
+              <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text4" tabindex="0" aria-expanded="false">
+                 <span class="nhsuk-details__summary-text"><small>Version 5</small></span>
+              </summary>
+             
+                 </details>
+                 <hr>
+                 <h3 class="nhsuk-heading-m">Hypothesis A</h3>
+                 <p style="background: #DEE0E2; padding: 20px;">We believe that updating the challenge journey in the new toolkit and inline with GDS will improve the accesibility of the journey whilst
+                  also keeping consistant with the NHS UK branding. This journey is to be tested on the 27/3/2023
+                 </p>
+                 <br>Use postcode: NE1 3JA to get through the DWP journey</br>
+                 <br>Use postcode: NE2 4XL to get through the BSA journey</br>
+                 <br>Use postcode: WA4 1AB to get to we cannot find your details</br>
+                 
+                 <hr>
+                     
+                 <h3 class="nhsuk-heading-m">What we created:</h3>
+                 <ul class="nhsuk-list nhsuk-list--bullet">
+                    <li> We created a PCN journey with content thats been reviewed by the content designer and also updated components inline with GDS
+                  </li>
+                  <li>
+                    </li>
+                 </ul>
+                 <h3 class="nhsuk-heading-m">What we plan to test:</h3>
+                 <ul class="nhsuk-list nhsuk-list--bullet">
+                    <li>We plan on doing user research with the PCN journey on the week commencing the 27/3/2023</li>
+                    <li>We want to test the journey and see if people can successfully pay</li>
+                    
+                 </ul>
+                 
+                 
+                 <a class="nhsuk-button" href="v5/respond-to-your-letter">Respond to your letter</a>
+                
+
+                 <div class="nhsuk-action-link nhsuk-u-margin-bottom-3">
+                    <a class="nhsuk-action-link__link" href="v5/user-journey-5">
+                       <svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__arrow-right-circle" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M0 0h24v24H0z" fill="none"></path>
+                          <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z">
+                          </path>
+                       </svg>
+                       <span class="nhsuk-action-link__text">View user journey PCN (v5)</span>
+                    </a>
+                 </div>
+              </div>
+           </details>
+        </div>
+     </details>
+     </div>
+          <div class="nhsuk-grid-row">
+            <div class="nhsuk-grid-column-three-thirds">
+      <details class="nhsuk-details nhsuk-expander" nhsuk-polyfilled="true" id="nhsuk-details3">
+        <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text3" tabindex="0" aria-expanded="false">
+           <span class="nhsuk-details__summary-text">Private Beta version 4 enquiry journey (6/3/2023)</span>
         </summary>
         <div class="nhsuk-details__text" id="nhsuk-details__text3" aria-hidden="true">
            <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0" nhsuk-polyfilled="true" id="nhsuk-details4">
@@ -114,7 +171,7 @@
                   
                  </p>
                  <br>Use postcode: NE1 3JA to get through the DWP journey with pay or confirm added screen</br>
-                 <br>Use postcode: NE2 4XL to get through the BSA journey</br>
+                 <br>Use postcode: NE2 4XL to get through the BSA journey with addeed content on what happens next</br>
                  <br>Use postcode: WA4 1AB to get to we cannot find your details</br>
                  
                  <hr>
@@ -158,7 +215,7 @@
             <div class="nhsuk-grid-column-three-thirds">
       <details class="nhsuk-details nhsuk-expander" nhsuk-polyfilled="true" id="nhsuk-details3">
         <summary class="nhsuk-details__summary" role="button" aria-controls="nhsuk-details__text3" tabindex="0" aria-expanded="false">
-           <span class="nhsuk-details__summary-text">Private Beta version 3 (27/2/2023)</span>
+           <span class="nhsuk-details__summary-text">Private Beta version 3 enquiry journey (27/2/2023)</span>
         </summary>
         <div class="nhsuk-details__text" id="nhsuk-details__text3" aria-hidden="true">
            <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0" nhsuk-polyfilled="true" id="nhsuk-details4">
