--- a/app/views/v5/cannot-confirm-entitlement.html
+++ b/app/views/v5/cannot-confirm-entitlement.html
@@ -23,10 +23,6 @@
 </header>
 {% endblock %}
 
-{% block outerContent %}
-  
-{% endblock %}
-
 {% block content %}
 <div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
   <p class="nhsuk-phase-banner__content">
@@ -38,34 +34,33 @@
     </span>
    </p>
  </div>
-<div class="nhsuk-back-link">
-  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-      <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-    </svg>
-    Go back</a>
-  </div>
+
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+      <span class="nhsuk-caption-l">Confirm your entitlement</span>
+      <h1>
+        We cannot confirm you were entitled
+      </h1>
+    
+      <p>The information you’ve given us does not prove you were entitled to free NHS prescriptions between 18 November 2019 and 30 November 2019.</p>
+      
 
-      <form action="v4-postcode-input" method="get" class="form">
-
-        <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your postcode as shown on your letter</h1>
-        <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              For example, WA4 1AB
-            </div>
-          </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
-        </div>
-        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-          Continue
-        </button>
-       </form>
-
+      <h2>What to do next</h2>
+      <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription Prepayment Certificate between 18 November 2019 and 30 November 2019.</p>
+      <p><a href="/v3/we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
+      <p>If you do not send us proof, or we cannot find your exemption, you will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
+      <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="/v3/who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
+      <p><a href="">Print this page</a></p>
+      <h3>Feedback</h3>
+      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
+      <p><a href="">Leave feedback</a></p>
+            
+          
+  
+      
     </div>
   </div>
-
+  <style>
+  
+  </style>
 {% endblock %}
