--- a/app/views/v5/cannot-pay.html
+++ b/app/views/v5/cannot-pay.html
@@ -23,10 +23,6 @@
 </header>
 {% endblock %}
 
-{% block outerContent %}
-  
-{% endblock %}
-
 {% block content %}
 <div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
   <p class="nhsuk-phase-banner__content">
@@ -38,34 +34,22 @@
     </span>
    </p>
  </div>
-<div class="nhsuk-back-link">
-  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-      <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-    </svg>
-    Go back</a>
-  </div>
+
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-
-      <form action="v4-postcode-input" method="get" class="form">
-
-        <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your postcode as shown on your letter</h1>
-        <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              For example, WA4 1AB
-            </div>
-          </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
-        </div>
-        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-          Continue
-        </button>
-       </form>
-
+      <span class="nhsuk-caption-l">Respond to your letter</span>
+      <h1>
+        You cannot pay yet
+      </h1>
+    
+      <p>You have not yet been issued a Penalty Charge Notice (PCN).</p>
+      
+      <p>We send the enquiry letter before the PCN to give you time to confirm if you were entitled to free NHS prescriptions.</p>
+      <p>If you do not confirm you were entitled to free NHS prescriptions within [number] days (by [date]) we will issue a PCN. When you receive the PCN you will be able to use this service to pay your penalty charge.</p>
+     
     </div>
   </div>
-
+  <style>
+  
+  </style>
 {% endblock %}
