--- a/app/views/v5/enter-exemption-certificate-number.html
+++ b/app/views/v5/enter-exemption-certificate-number.html
@@ -48,17 +48,13 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="v4-postcode-input" method="get" class="form">
+      <form action="v4-certificate-number-input" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your postcode as shown on your letter</h1>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1>What is your [Benefit] number?</h1>
         <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              For example, WA4 1AB
-            </div>
-          </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
+          
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber" type="text">
         </div>
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
