--- a/app/views/v5/enter-postcode.html
+++ b/app/views/v5/enter-postcode.html
@@ -58,7 +58,7 @@
               For example, WA4 1AB
             </div>
           </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="pcn-postcode" name="postcode" type="text">
         </div>
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
