--- a/app/views/v5/enter-reference-number-again.html
+++ b/app/views/v5/enter-reference-number-again.html
@@ -48,22 +48,22 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="v4-postcode-input" method="get" class="form">
+      <form action="/v3/what-is-dob" method="post" class="form">
 
         <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your postcode as shown on your letter</h1>
+        <h1>Enter your reference number again</h1>
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="one-half">
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              For example, WA4 1AB
+              We ask this to make sure we find the correct record.
             </div>
           </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="one-half" name="one-half" type="text">
         </div>
-        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+        <a href="/v4/date-of-birth" class="nhsuk-button">
           Continue
-        </button>
-       </form>
+        </a>
+      </form>
 
     </div>
   </div>
