--- a/app/views/v5/update-address.html
+++ b/app/views/v5/update-address.html
@@ -48,18 +48,46 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="v4-postcode-input" method="get" class="form">
+      <form action="check-personal-details" method="post" class="form">
 
-        <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your postcode as shown on your letter</h1>
-        <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              For example, WA4 1AB
-            </div>
-          </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
-        </div>
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1>What was your address when you had [Benefit]?</h1>
+       
+
+          <div class="nhsuk-form-group">
+              <label class="nhsuk-label" for="addressline1">
+                  Address line 1
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-20" id="addressline1" name="addressline1" type="text" autocomplete="address-line1">
+          </div>
+
+          <div class="nhsuk-form-group">
+                  <label class="nhsuk-label" for="addressline2">
+                  Address line 2 (optional)
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-20" id="addressline2" name="addressline2" type="text" autocomplete="address-line2">
+          </div>
+
+          <div class="nhsuk-form-group">
+                  <label class="nhsuk-label" for="towncity">
+                  Town or city
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-20" id="towncity" name="towncity" type="text" autocomplete="address-level2">
+          </div>
+
+          <div class="nhsuk-form-group">
+                  <label class="nhsuk-label" for="postcode">
+                  Postcode
+              </label>
+              <input class="nhsuk-input nhsuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code">
+          </div>
+
+          
+
+      
+
+                
+
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
         </button>
