--- a/app/views/v5/who-can-ask-for-review.html
+++ b/app/views/v5/who-can-ask-for-review.html
@@ -23,10 +23,6 @@
 </header>
 {% endblock %}
 
-{% block outerContent %}
-  
-{% endblock %}
-
 {% block content %}
 <div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
   <p class="nhsuk-phase-banner__content">
@@ -38,7 +34,7 @@
     </span>
    </p>
  </div>
-<div class="nhsuk-back-link">
+ <div class="nhsuk-back-link">
   <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
     <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
       <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
@@ -47,25 +43,41 @@
   </div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+      <span class="nhsuk-caption-l">Confirm your entitlement</span>
+      <h1>
+        Asking for a review
+      </h1>
+    
+      <p>We understand that you may have made an honest mistake and did not mean to do anything wrong.</p>
+      <p>If you have an exceptional reason why you claimed a free NHS prescription you were not entitled to, you can ask for a review.</p>
 
-      <form action="v4-postcode-input" method="get" class="form">
+      
 
-        <span class="nhsuk-caption-l">Your details</span>
-        <h1>Enter your postcode as shown on your letter</h1>
-        <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              For example, WA4 1AB
-            </div>
-          </label>
-          <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
-        </div>
-        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-          Continue
-        </button>
-       </form>
-
+      <h2>Reasons we will not usually accept</h2>
+      <p>We will not usually review your enquiry letter if:</p>
+      <ul>
+        <li>your exemption certificate had expired</li>
+        <li>you feel that you were misadvised by your GP or by pharmacy staff</li>
+        <li>you thought that your benefit entitled you to claim</li>
+        <li>you thought your prescription prepayment certificate would automatically renew</li>
+      </ul>
+      <h3>What to do next</h3>
+      <p>If you have an exceptional reason why you made the claim at the time, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us to review your enquiry letter</a>.</p>
+       <p>When you contact us you must include your:</p>     
+       <ul>
+        <li>reference number 11193492846</li>
+        <li>full name</li>
+        <li>date of birth</li>
+        <li>address including postcode</li>
+      </ul>
+          
+      <h3>If you’re not entitled to a review</h3>
+      <p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
+  
+      
     </div>
   </div>
-
+  <style>
+  
+  </style>
 {% endblock %}
