--- a/app/views/v4/were-you-claiming-any-benefits.html
+++ b/app/views/v4/were-you-claiming-any-benefits.html
@@ -49,32 +49,32 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="verson4-exemption" method="get" class="form">
+      <form action="different-exemption" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-l">Were you claiming any of these benefits (or named on them) between 18 November 2019 and 30 November 2019?</h1>
         <div class="nhsuk-form-group">
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="verson4-exemption" name="exemption" type="radio" value="income">
+                <input class="nhsuk-radios__input" id="different-exemption" name="exemptiontype" type="radio" value="income">
                 <label class="nhsuk-label nhsuk-radios__label" for="income">
                   Income Support or income-related Employment and Support Allowance
                 </label>
             </div>
             <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="verson4-exemption" name="exemption" type="radio" value="support">
+              <input class="nhsuk-radios__input" id="different-exemption" name="exemptiontype" type="radio" value="support">
               <label class="nhsuk-label nhsuk-radios__label" for="support">
                 Income-based Jobseeker's Allowance
               </label>
           </div>
           <div class="nhsuk-radios__item">
-            <input class="nhsuk-radios__input" id="version4-exemption" name="exemption" type="radio" value="uc">
+            <input class="nhsuk-radios__input" id="different-exemption" name="exemptiontype" type="radio" value="uc">
             <label class="nhsuk-label nhsuk-radios__label" for="uc">
               Universal Credit
             </label>
         </div>
         <div class="nhsuk-radios__item">
-          <input class="nhsuk-radios__input" id="verson4-exemption" name="exemption" type="radio" value="pension">
+          <input class="nhsuk-radios__input" id="different-exemption" name="exemptiontype" type="radio" value="pension">
           <label class="nhsuk-label nhsuk-radios__label" for="pension">
             Your partner's Pension Credit Guarantee Credit award
           </label>
@@ -84,14 +84,14 @@
       <p>or</p>
     </div>
     <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="verson4-exemption" name="exemption" type="radio" value="no">
+      <input class="nhsuk-radios__input" id="different-exemption" name="exemptiontype" type="radio" value="no">
       <label class="nhsuk-label nhsuk-radios__label" for="no">
         No, none of these
       </label>
   </div>
 
         </div>
-         
+      
             
 
           </fieldset>
@@ -103,7 +103,7 @@
     </button>
     </div>
 
-        
+  </form>
    
 
     </div>
