--- a/app/views/v5/payment-method.html
+++ b/app/views/v5/payment-method.html
@@ -15,7 +15,7 @@
       </a>
     </div>
     <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
+      <a class="nhsuk-header__transactional-service-name--link" href="/v3/respond-to-your-letter">Respond to your letter</a>
     </div>
 
   </div>
@@ -49,40 +49,29 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/v5/enter-postcode" method="post" class="form">
+      <form action="debit-card" method="get" class="form">
 
-        <span class="nhsuk-caption-l">Your details</span>
-        <h1>What is your date of birth?</h1>
-        <div class="nhsuk-hint" id="example-hint">
-          For example, 31 3 1980
+        <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
+        <h1 class="nhsuk-heading-xl">How would you like to pay your penalty charge?</h1>
+        <div class="nhsuk-form-group">
+
+          <div class="nhsuk-radios nhsuk-radios">
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
+                <label class="nhsuk-label nhsuk-radios__label" for="yes">
+                  Debit or credit card
+                </label>
+            </div>
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
+                <label class="nhsuk-label nhsuk-radios__label" for="no">
+                  Direct Debit
+                </label>
+            </div>
         </div>
-    
-        <div class="nhsuk-date-input" id="example">
-          <div class="nhsuk-date-input__item">
-            <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="day">
-                Day
-              </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text" pattern="[0-9]*" inputmode="numeric">
-            </div>
-          </div>
-          <div class="nhsuk-date-input__item">
-            <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="month">
-                Month
-              </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text" pattern="[0-9]*" inputmode="numeric">
-            </div>
-          </div>
-          <div class="nhsuk-date-input__item">
-            <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="year">
-                Year
-              </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text" pattern="[0-9]*" inputmode="numeric">
-            </div>
-          </div>
+          </fieldset>
         
+        </div>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
