--- a/app/views/v4/cannot-confirm-entitlement.html
+++ b/app/views/v4/cannot-confirm-entitlement.html
@@ -42,7 +42,7 @@
         We cannot confirm you were entitled
       </h1>
     
-      <p>The information you’ve given us does not prove you were entitled to free NHS prescriptions between 18 November 2019 and 30 November 2019.</p>
+      <p>The information you've given us does not prove you were entitled to free NHS prescriptions between 18 November 2019 and 30 November 2019.</p>
       
 
       <h2>What to do next</h2>
