changes to journey

--- a/app/views/v4/enquiry-letter-details.html
+++ b/app/views/v4/enquiry-letter-details.html
@@ -106,7 +106,7 @@
     </div>
    
   </div>
-  <a href="/v4/what-you-need-to-do-next" class="nhsuk-button">
+  <a href="/v4/what-happens-next" class="nhsuk-button">
     Continue
   </a>
 {% endblock %}
