--- a/app/views/v4/what-happens-next.html
+++ b/app/views/v4/what-happens-next.html
@@ -40,6 +40,12 @@
   <li>tell you how to send us proof you were entitled to free NHS prescriptions if we need this</li>
   <li>let you know the next steps</li>
 </ul>
+
+<div class="nhsuk-inset-text">
+  <span class="nhsuk-u-visually-hidden">Information: </span>
+  <p>If we can confirm you were entitled we will close your case and there will be no further action needed.</p>
+<p>If we cannot confirm you were entitled you will be sent a Penalty Charge Notice. This will include information on how and when to pay.</p>
+</div>
 <p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice">Find out more about how we use your information (opens in a new window)</a>.</p>
   <a href="/v4/did-you-have-this-exemption" class="nhsuk-button">
     Continue
