--- a/app/views/v5/what-you-need-to-do-next.html
+++ b/app/views/v5/what-you-need-to-do-next.html
@@ -49,15 +49,15 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="confirm-entitlement" method="get" class="form">
+      <form action="penalty-confirm-pay" method="get" class="form">
 
         <span class="nhsuk-caption-l">Your details</span>
         <h1 class="nhsuk-heading-l">What do you need to do next?</h1>
         <div class="nhsuk-form-group">
           <div class="nhsuk-radios nhsuk-radios">
             <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="confirm-entitlement" name="confirm" type="radio" value="entitlement">
-                <label class="nhsuk-label nhsuk-radios__label" for="med">
+                <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="entitlement">
+                <label class="nhsuk-label nhsuk-radios__label" for="entitlement">
                   Confirm I was entitled to free NHS prescriptions
                 </label>
             </div>
@@ -65,8 +65,8 @@
               We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.
             </div>
             <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="confirm-entitlement" name="confirm" type="radio" value="pay">
-              <label class="nhsuk-label nhsuk-radios__label" for="mat">
+              <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="pay">
+              <label class="nhsuk-label nhsuk-radios__label" for="pay">
                 Pay a Penalty Charge Notice (PCN)
               </label>
           </div>
