--- a/app/views/layout-gov.html
+++ b/app/views/layout-gov.html
@@ -47,7 +47,7 @@
             </span>
           </a>
         </div>
-        <h3>Buy a HRT Prepayment Certificate - Online</h3>
+        <h3>Pay a penalty charge notice</h3>
       </div>
     </header>
 {% endblock %}
