--- a/app/views/v5/gov-pay.html
+++ b/app/views/v5/gov-pay.html
@@ -504,7 +504,7 @@
             </div> 
             <br>
             <div class="form-group" style="margin-top:20px">
-              <a href="payment-confirmed" class="govuk-button">
+              <a href="gov-payment-confirmed" class="govuk-button">
                 Proceed to payment
               </a>
               <br>
