--- a/app/views/v5/gov-payment-confirmed.html
+++ b/app/views/v5/gov-payment-confirmed.html
@@ -63,7 +63,7 @@
 
         
             <div class="form-group" style="margin-top:20px">
-              <a href="direct-debit-completed" class="govuk-button">
+              <a href="full-payment-made" class="govuk-button">
                 Confirm payment
               </a>
               
