--- a/app/views/v5/full-payment-made.html
+++ b/app/views/v5/full-payment-made.html
@@ -31,41 +31,47 @@
        This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
     </span>
    </p>
+ </div>
 
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
         <div class="nhsuk-card__content">
           <h1 class="nhsuk-card__heading" style="text-align: center; color: white;">
-           Full payment made. You have paid your Penalty Charge Notice in full and your case is closed
+           Full payment made
           </h1>
+          
+          <h2 class="nhsuk-card__content" style="text-align: center; color: white;">you have paid your Penalty Charge Notice in full and your case has now been closed.</h2>
+          
+          
           
         </div>
       </div>
      </div>
 
       </div>
-      <p>Confirmation of the instruction will be sent to you in 3 working days, or be received by you no later than 10 working days before the first collection.</p>
-      <h2>First Payment</h2>
+       <h2>Payment confirmation</h2>
+      <p>We've received your full payment and have closed your case. You do not need to do anything else.</p>
 
-      <p>Your first payment of £35.20 will be taken on or just after 01 February 2023.</p>
-      <h2>Next Payment</h2>
-      <p>Your next payment of £35.20 will be taken on or just after 01 March 2023.</p>
-      <p>As long as you keep  up payments there will be no further charges added to your account.</p>
-      <h2>How to avoid penalties in the future</h2>
+      <div class="nhsuk-inset-text">
+        <span class="nhsuk-u-visually-hidden">Information: </span>
+        <p>Penalty Charge Notice reference number</p>
+        <p>123456789</p>
 
-      <ul>
-        <li>Make sure that your GP and dentist have your correct home address</li>
-        <li>If you receive benefits or have an exemption certificate, make sure that the relevant organisations have your correct home address.</li>
-        <li>If you have an exemption certificate, make sure it does not expire.</li>
-        <li>For more information visit <a href="">www.nhsbsa.nhs.uk/penaltycharges</a> </li>
-      </ul> 
+        <p>You've paid</p>
+        <p>£123.80</p>
+      </div>
 
+      <h3>How to avoid a Penalty Charge Notice in the future</h3>
+        <p>Make sure your details are correct at your GP surgery, dental practice, and any benefits organisations.</p>
+     <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
+        
+        <p> <a href="">Check if you are currently entitled to help with your health costs.</a></p>
         <p><a href="">Print this page</a></p>
-     
-<p><h2>Feedback</h2></p> 
-<p>Leaving feedback takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service</p>  
-<p> <a href="">Leave feedback</a></p>
+<h3>Feedback</h3>
+<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
+<p><a href="">Leave feedback</a></p>
+   
 
     </div>
   </div>
