--- a/app/views/v5/gov-pay.html
+++ b/app/views/v5/gov-pay.html
@@ -949,6 +949,19 @@
       font-size: 18pt;
       line-height: 1.15
   }
+}.govuk-template__body {
+    margin: 0;
+    background-color: #fff;
+}
+body {
+    background-color: #fff;
+    color: #212b32;
+    font-size: 16px;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    line-height: 1.5;
+    margin: 0;
+    min-height: 100%;
 }
 
 .govuk-label--s {
