--- a/app/views/v5/penalty-charge-notice-details.html
+++ b/app/views/v5/penalty-charge-notice-details.html
@@ -47,25 +47,52 @@
             Do not delay
           </span>
         </h3>
-        <p>You now have 10 day to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge Notice (by 06 September 2021). If you do not respond, an extra surcharge of up to £50 will be added to these charges.</p>
+        <p>You now have 10 days to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge Notice (by 06 September 2021). If you do not respond, an extra surcharge of up to £50 will be added to these charges.</p>
       </div>
      
     
-       <h2>Check your details carefully</h2>
-
-       <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
-      <p>We have not been able to confirm you were entitled to free NHS prescriptions using these details.</p>
-      <dl class="nhsuk-summary-list">
-
+       <h2>Penalty Charge Notice amount</h2>
+       <dl class="nhsuk-summary-list">
         <div class="nhsuk-summary-list__row">
-          <dt class="nhsuk-summary-list__key">
-            Date prescription was claimed
-          </dt>
+         
           <dd class="nhsuk-summary-list__value">
-            Between 1 November and 30 November 2017
+            Prescription charges
           </dd>
+          <dt class="nhsuk-summary-list__key">
+            £23.80
+           </dt>
+        </div>
+        
+        <div class="nhsuk-summary-list__row">
+          <dd class="nhsuk-summary-list__value">
+            Penalty charge
+          </dd>
+          <dt class="nhsuk-summary-list__key">
+            £100.00
+          </dt>
+          
       
         </div>
+      
+        <div class="nhsuk-summary-list__row">
+          
+          <dd class="nhsuk-summary-list__value">
+            <p>Total amount</p>
+            
+          </dd>
+          <dt class="nhsuk-summary-list__key">
+            £123.80
+          </dt>
+      
+        </div>
+        
+      </dl>
+   
+
+
+      <dl class="nhsuk-summary-list">
+
+       
         </dl>
       <h3>Details on the prescription</h3>
       <dl class="nhsuk-summary-list">
@@ -99,8 +126,17 @@
           </dd>
       
         </div>
-        
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Date prescription was claimed
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            Between 1 November and 30 November 2017
+          </dd>
+      
+        </div>
       </dl>
+   
       <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue.</p>
       </dl>
     </div>
