--- a/app/views/v5/penalty-charge-notice-details-copy.html
+++ b/app/views/v5/penalty-charge-notice-details-copy.html
@@ -1,7 +1,5 @@
 {% extends 'layout.html' %}
 
-{% set mainClasses = "nhsuk-main-wrapper--s" %}
-
 {% block pageTitle %}
 <header class="nhsuk-header nhsuk-header--transactional" role="banner">
   <div class="nhsuk-width-container nhsuk-header__container">
@@ -23,21 +21,11 @@
 </header>
 {% endblock %}
 
-{% block outerContent %}
-  
-{% endblock %}
+
+
 
 {% block content %}
-<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-  <p class="nhsuk-phase-banner__content">
-    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-      BETA
-     </strong>
-     <span class="nhsuk-phase-banner__text">
-       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-    </span>
-   </p>
- </div>
+
 <div class="nhsuk-back-link">
   <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
     <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
@@ -47,40 +35,93 @@
   </div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+      <span class="nhsuk-caption-l">Respond to your letter</span>
+      <h1>
+        Penalty Charge Notice 01234567890
+      </h1>
 
-      <form action="cert-number" method="get" class="form">
-
-        <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>Do you know your [Benefit] number?</h1>
-        <div class="nhsuk-form-group">
-          <label class="nhsuk-label" for="one-half">
-            <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              You don't have to tell us your certificate number, but telling us can helps us find your certificate. You can find the number on the certificate.
-            </div>
-          </label>
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="cert-number" name="number" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                    Yes
-                </label>
-            </div>
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="cert-number" name="number" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="no">
-                    No
-                </label>
-            </div>
-        </div>
-        </fieldset>
-      
+      <div class="nhsuk-warning-callout">
+        <h3 class="nhsuk-warning-callout__label">
+          <span role="text">
+            <span class="nhsuk-u-visually-hidden">Important: </span>
+            Do not delay
+          </span>
+        </h3>
+        <p>You now have 10 days to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge Notice (by 06 September 2021). If you do not respond, an extra surcharge of up to £50 will be added to these charges.</p>
       </div>
-        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-          Continue
-        </button>
-       </form>
+     
+    
+      <h2 class="nhsuk-heading-m">Penalty Charge Notice amount</h2>
+       <div class="nhsuk-promo">
+        
+       <p>Prescription charges: £23.80<br>
+        </p><p>Penalty charge: £100.00</p>
+        <p><b>Total amount:  £123.80</b>
+        
+      
+      </p></div>
 
+
+      <dl class="nhsuk-summary-list">
+
+       
+        </dl>
+      <h3>Details on the prescription</h3>
+      <dl class="nhsuk-summary-list">
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Name
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            Michellle Doe
+          </dd>
+      
+        </div>
+        
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Address
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            12 Old Oak Road<br>Throckley<br> NE67 9AD
+          </dd>
+      
+        </div>
+      
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Exemption reason ticked
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            <p>Gets Income Support or income-related Employment and Support Allowance.</p>
+            
+          </dd>
+      
+        </div>
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Date prescription was claimed
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            Between 1 November and 30 November 2017
+          </dd>
+      
+        </div>
+      </dl>
+   
+      <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue.</p>
+      </dl>
     </div>
+   
   </div>
-
+  <a href="/v5/what-you-need-to-do-next" class="nhsuk-button">
+    Continue
+  </a>
+  <style>
+    .nhsuk-promo{
+    background:white;
+    padding:20px;
+    box-shadow: 0 4px 0 0 #D8DDE0;
+    }
+  </style>
 {% endblock %}
