--- a/app/views/v5/respond-to-your-letter.html
+++ b/app/views/v5/respond-to-your-letter.html
@@ -65,7 +65,16 @@
        <h3>How we use your information</h3>
 
        <p>We use the information you provide to help us match your details. You can find out more about <a href="">how we use your information</a>.</p>
-
+       <div class="nhsuk-form-group">
+        <label class="nhsuk-label" for="select-1">
+          Label text goes here
+        </label>
+        <select class="nhsuk-select" id="select-1" name="select-1">
+          <option value="1">NHS.UK frontend option 1</option>
+          <option value="2" selected>NHS.UK frontend option 2</option>
+          <option value="3" disabled>NHS.UK frontend option 3</option>
+        </select>
+      </div>
 
     </div>
 
